--- a/src/assets/home.scss
+++ b/src/assets/home.scss
@@ -10,28 +10,39 @@
   transition: all 400ms !important;
 }
 
-.add-user {
-  max-width: 1000px !important;
-  width: 800px !important;
-  padding: 10px !important;
-  margin: 0 auto !important;
-  .form {
-    div {
-      width: 100%;
-      margin-bottom: 10px !important;
-    }
-  }
-  .add-button {
-    margin: 0 auto !important;
-    width: 100px !important;
-    margin-top: 20px !important;
-    text-align: center !important;
+.no-content {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  height: 800px !important;
+}
+
+@media only screen and (max-width: 1200px) {
+  .container {
+    width: 90% !important;
   }
 }
 
-.ui.fade.animated.button .visible.content {
-  top: 50% !important;
-  left: 0% !important;
-  width: 100px !important;
-  height: 30px !important;
+@media only screen and (max-width: 1000px) {
+  .container {
+    width: 800px !important;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .container {
+    width: 80% !important;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .container {
+    width: 90% !important;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .container {
+    width: 99% !important;
+  }
 }
