--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -10,25 +10,31 @@
   padding: 10px;
   transition: all 400ms !important; }
 
-.add-user {
-  max-width: 1000px !important;
-  width: 800px !important;
-  padding: 10px !important;
-  margin: 0 auto !important; }
-  .add-user .form div {
-    width: 100%;
-    margin-bottom: 10px !important; }
-  .add-user .add-button {
-    margin: 0 auto !important;
-    width: 100px !important;
-    margin-top: 20px !important;
-    text-align: center !important; }
+.no-content {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  height: 800px !important; }
 
-.ui.fade.animated.button .visible.content {
-  top: 50% !important;
-  left: 0% !important;
-  width: 100px !important;
-  height: 30px !important; }
+@media only screen and (max-width: 1200px) {
+  .container {
+    width: 90% !important; } }
+
+@media only screen and (max-width: 1000px) {
+  .container {
+    width: 800px !important; } }
+
+@media only screen and (max-width: 750px) {
+  .container {
+    width: 80% !important; } }
+
+@media only screen and (max-width: 400px) {
+  .container {
+    width: 90% !important; } }
+
+@media only screen and (max-width: 320px) {
+  .container {
+    width: 99% !important; } }
 
 .user-container {
   width: 100% !important;
@@ -59,11 +65,37 @@
   .user-card .info-user {
     display: flex;
     flex-direction: column;
-    width: 250px !important;
+    width: 300px !important;
     margin: 10px 0 !important; }
     .user-card .info-user > * {
       align-self: baseline;
       margin-bottom: 10px !important; }
+
+.add-user {
+  max-width: 1000px !important;
+  width: 800px !important;
+  padding: 10px !important;
+  margin: 0 auto !important; }
+  .add-user .form div {
+    width: 100%;
+    margin-bottom: 10px !important; }
+  .add-user .add-button {
+    margin: 0 auto !important;
+    width: 100px !important;
+    margin-top: 20px !important;
+    text-align: center !important; }
+
+.ui.fade.animated.button .visible.content {
+  top: 50% !important;
+  left: 0% !important;
+  width: 100px !important;
+  height: 30px !important; }
+
+.error {
+  color: red; }
+
+.light-coral {
+  background-color: lightcoral !important; }
 
 i {
   transition: all 400ms !important; }
